--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: palevioletred;
+    background-color: #FF851B;
     display: flex;
     justify-content: space-between;
     align-items: center;
