--- a/src/components/Navigation/Footer/FooterItems/FooterItem/FooterItem.module.css
+++ b/src/components/Navigation/Footer/FooterItems/FooterItem/FooterItem.module.css
@@ -7,7 +7,7 @@
 }
 
 .FooterItem a {
-    color: #8F5C2C;
+    color: white;
     text-decoration: none;
     width: 100%;    
     box-sizing: border-box;
